# compound-embedding

./: .darglint  .flake8  .gitignore  README.md  env.yaml  env.yml  gen_efp_train.py  install_grover.sh  pyproject.toml
lite/: README.md  embed.py  pyproject.toml
lite/data/: input.csv
lite/src/eosce/: __init__.py  cli.py  griddify.joblib  mappings.joblib  models.py  utils.py
notebooks/: export_models.ipynb  train_griddify.ipynb
src/compound_embedding/: __init__.py  models.py  mordred_descriptor.joblib  utils.py
src/compound_embedding/cli/: __init__.py  generate.py  main.py  test.py  train.py
src/compound_embedding/fs_mol/: README.md
src/compound_embedding/fs_mol/data/: __init__.py  fsmol_batcher.py  fsmol_dataset.py  fsmol_task.py  fsmol_task_sampler.py  multitask.py  protonet.py
src/compound_embedding/fs_mol/models/: abstract_torch_fsmol_model.py  protonet.py
src/compound_embedding/fs_mol/utils/: cli_utils.py  metric_logger.py  protonet_utils.py  test_utils.py
src/compound_embedding/pipelines/: common.py  data_qc.py  gen_dataset.py  merge_fs_mol.py  merge_grover.py  merge_mordred.py
